<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfileImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/profile"
        app:civ_border_width="2dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        app:civ_border_color="#FF000000"/>
    <ImageView
        android:id="@+id/imgAddProfileImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/add"
        android:layout_gravity="center"
        android:layout_marginTop="-20dp"
        android:layout_marginStart="30dp"
        />
    <TextView
        android:id="@+id/txtProfileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textColor="@color/mycolor2"
        app:drawableLeftCompat="@drawable/ic_account" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/enter_your_name"
        android:textColorHint="@color/mycolor2"
        app:boxStrokeColor="@color/mycolor2"
        app:endIconTint="@color/mycolor2"
        android:visibility="gone"
        android:layout_margin="10dp"
        app:startIconTint="@color/mycolor2"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etProfileName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textColor="@color/mycolor2"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/txtProfileEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/email"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textColor="@color/mycolor2"
        app:drawableLeftCompat = "@drawable/ic_email"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/enter_email"
        android:textColorHint="@color/mycolor2"
        app:boxStrokeColor="@color/mycolor2"
        app:endIconTint="@color/mycolor2"
        app:endIconMode="clear_text"
        android:layout_margin="10dp"
        app:startIconTint="@color/mycolor2"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etProfileEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColor="@color/mycolor2"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/txtProfileStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_status"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textColor="@color/mycolor2"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/enter_your_status"
        android:textColorHint="@color/mycolor2"
        app:boxStrokeColor="@color/mycolor2"
        app:endIconTint="@color/mycolor2"
        android:layout_margin="10dp"
        android:visibility="gone"
        app:startIconTint="@color/mycolor2"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etProfileStatus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textColor="@color/mycolor2"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btUpdateProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:visibility="gone"
        android:text="@string/update"
        android:textColor="@color/mycolor6"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@color/mycolor4"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btSaveProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/save"
        android:visibility="gone"
        android:textColor="@color/mycolor6"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@color/mycolor7"
        />
    <ProgressBar
        android:id="@+id/profileProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        />
</LinearLayout>