<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    android:background="@color/mycolor6"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/enter_email"
            android:textColorHint="@color/mycolor2"
            app:boxStrokeColor="@color/mycolor2"
            app:endIconTint="@color/mycolor2"
            app:endIconMode="clear_text"
            app:startIconTint="@color/mycolor2"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignUpEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/mycolor2"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_ip_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/enter_your_password"
            android:textColorHint="@color/mycolor2"
            app:boxStrokeColor="@color/mycolor2"
            app:endIconTint="@color/mycolor2"
            app:endIconMode="password_toggle"
            android:layout_marginTop="10dp"
            app:startIconTint="@color/mycolor2"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignUpPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/mycolor2"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_ip_Confirm_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/confirm_your_password"
            android:textColorHint="@color/mycolor2"
            app:boxStrokeColor="@color/mycolor2"
            app:endIconTint="@color/mycolor2"
            app:endIconMode="password_toggle"
            android:layout_marginTop="10dp"
            app:startIconTint="@color/mycolor2"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignUpConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/mycolor2"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_Password"
            android:layout_marginTop="10dp"
            android:textColor="@color/mycolor6"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/signup"
            android:background="@color/mycolor18"
            />
        <ProgressBar
            android:id="@+id/signUpProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            />
    </LinearLayout>

</ScrollView>