<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_email"
                android:textColorHint="@color/mycolor2"
                app:boxStrokeColor="@color/mycolor2"
                app:endIconTint="@color/mycolor2"
                app:endIconMode="clear_text"
                app:startIconTint="@color/mycolor2"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/mycolor2"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_your_password"
                android:textColorHint="@color/mycolor2"
                app:boxStrokeColor="@color/mycolor2"
                app:endIconTint="@color/mycolor2"
                app:endIconMode="password_toggle"
                android:layout_marginTop="10dp"
                app:startIconTint="@color/mycolor2"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="@color/mycolor2"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/mycolor6"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/login"
                android:background="@color/mycolor18"
                />
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btGoogleLogin"
                android:layout_width="500dp"
                android:layout_height="100dp"
                android:src="@drawable/google"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                android:background="@color/mycolor6"
                />
            <RelativeLayout
                android:id="@+id/login_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="10dp"
                android:padding="20dp"
                android:visibility="gone"
                >
                <ProgressBar
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>
    </LinearLayout>
</ScrollView>